docs/5.x/README.md
---
permalink: /
---

# aws

The `aws` package contains functions and utilities for setting up the provider, resources, and data
sources of the [aws Terraform provider](TODO) using Jsonnet.

This package is autogenerated from the [tf-libsonnet/libgenerator](https://github.com/tf-libsonnet/libgenerator)
project.


* [accessanalyzer_analyzer](accessanalyzer_analyzer.md)
* [accessanalyzer_archive_rule](accessanalyzer_archive_rule.md)
* [account_alternate_contact](account_alternate_contact.md)
* [account_primary_contact](account_primary_contact.md)
* [acm_certificate](acm_certificate.md)
* [acm_certificate_validation](acm_certificate_validation.md)
* [acmpca_certificate](acmpca_certificate.md)
* [acmpca_certificate_authority](acmpca_certificate_authority.md)
* [acmpca_certificate_authority_certificate](acmpca_certificate_authority_certificate.md)
* [acmpca_permission](acmpca_permission.md)
* [acmpca_policy](acmpca_policy.md)
* [alb](alb.md)
* [alb_listener](alb_listener.md)
* [alb_listener_certificate](alb_listener_certificate.md)
* [alb_listener_rule](alb_listener_rule.md)
* [alb_target_group](alb_target_group.md)
* [alb_target_group_attachment](alb_target_group_attachment.md)
* [ami](ami.md)
* [ami_copy](ami_copy.md)
* [ami_from_instance](ami_from_instance.md)
* [ami_launch_permission](ami_launch_permission.md)
* [amplify_app](amplify_app.md)
* [amplify_backend_environment](amplify_backend_environment.md)
* [amplify_branch](amplify_branch.md)
* [amplify_domain_association](amplify_domain_association.md)
* [amplify_webhook](amplify_webhook.md)
* [api_gateway_account](api_gateway_account.md)
* [api_gateway_api_key](api_gateway_api_key.md)
* [api_gateway_authorizer](api_gateway_authorizer.md)
* [api_gateway_base_path_mapping](api_gateway_base_path_mapping.md)
* [api_gateway_client_certificate](api_gateway_client_certificate.md)
* [api_gateway_deployment](api_gateway_deployment.md)
* [api_gateway_documentation_part](api_gateway_documentation_part.md)
* [api_gateway_documentation_version](api_gateway_documentation_version.md)
* [api_gateway_domain_name](api_gateway_domain_name.md)
* [api_gateway_gateway_response](api_gateway_gateway_response.md)
* [api_gateway_integration](api_gateway_integration.md)
* [api_gateway_integration_response](api_gateway_integration_response.md)
* [api_gateway_method](api_gateway_method.md)
* [api_gateway_method_response](api_gateway_method_response.md)
* [api_gateway_method_settings](api_gateway_method_settings.md)
* [api_gateway_model](api_gateway_model.md)
* [api_gateway_request_validator](api_gateway_request_validator.md)
* [api_gateway_resource](api_gateway_resource.md)
* [api_gateway_rest_api](api_gateway_rest_api.md)
* [api_gateway_rest_api_policy](api_gateway_rest_api_policy.md)
* [api_gateway_stage](api_gateway_stage.md)
* [api_gateway_usage_plan](api_gateway_usage_plan.md)
* [api_gateway_usage_plan_key](api_gateway_usage_plan_key.md)
* [api_gateway_vpc_link](api_gateway_vpc_link.md)
* [apigatewayv2_api](apigatewayv2_api.md)
* [apigatewayv2_api_mapping](apigatewayv2_api_mapping.md)
* [apigatewayv2_authorizer](apigatewayv2_authorizer.md)
* [apigatewayv2_deployment](apigatewayv2_deployment.md)
* [apigatewayv2_domain_name](apigatewayv2_domain_name.md)
* [apigatewayv2_integration](apigatewayv2_integration.md)
* [apigatewayv2_integration_response](apigatewayv2_integration_response.md)
* [apigatewayv2_model](apigatewayv2_model.md)
* [apigatewayv2_route](apigatewayv2_route.md)
* [apigatewayv2_route_response](apigatewayv2_route_response.md)
* [apigatewayv2_stage](apigatewayv2_stage.md)
* [apigatewayv2_vpc_link](apigatewayv2_vpc_link.md)
* [app_cookie_stickiness_policy](app_cookie_stickiness_policy.md)
* [appautoscaling_policy](appautoscaling_policy.md)
* [appautoscaling_scheduled_action](appautoscaling_scheduled_action.md)
* [appautoscaling_target](appautoscaling_target.md)
* [appconfig_application](appconfig_application.md)
* [appconfig_configuration_profile](appconfig_configuration_profile.md)
* [appconfig_deployment](appconfig_deployment.md)
* [appconfig_deployment_strategy](appconfig_deployment_strategy.md)
* [appconfig_environment](appconfig_environment.md)
* [appconfig_extension](appconfig_extension.md)
* [appconfig_extension_association](appconfig_extension_association.md)
* [appconfig_hosted_configuration_version](appconfig_hosted_configuration_version.md)
* [appflow_connector_profile](appflow_connector_profile.md)
* [appflow_flow](appflow_flow.md)
* [appintegrations_data_integration](appintegrations_data_integration.md)
* [appintegrations_event_integration](appintegrations_event_integration.md)
* [applicationinsights_application](applicationinsights_application.md)
* [appmesh_gateway_route](appmesh_gateway_route.md)
* [appmesh_mesh](appmesh_mesh.md)
* [appmesh_route](appmesh_route.md)
* [appmesh_virtual_gateway](appmesh_virtual_gateway.md)
* [appmesh_virtual_node](appmesh_virtual_node.md)
* [appmesh_virtual_router](appmesh_virtual_router.md)
* [appmesh_virtual_service](appmesh_virtual_service.md)
* [apprunner_auto_scaling_configuration_version](apprunner_auto_scaling_configuration_version.md)
* [apprunner_connection](apprunner_connection.md)
* [apprunner_custom_domain_association](apprunner_custom_domain_association.md)
* [apprunner_default_auto_scaling_configuration_version](apprunner_default_auto_scaling_configuration_version.md)
* [apprunner_observability_configuration](apprunner_observability_configuration.md)
* [apprunner_service](apprunner_service.md)
* [apprunner_vpc_connector](apprunner_vpc_connector.md)
* [apprunner_vpc_ingress_connection](apprunner_vpc_ingress_connection.md)
* [appstream_directory_config](appstream_directory_config.md)
* [appstream_fleet](appstream_fleet.md)
* [appstream_fleet_stack_association](appstream_fleet_stack_association.md)
* [appstream_image_builder](appstream_image_builder.md)
* [appstream_stack](appstream_stack.md)
* [appstream_user](appstream_user.md)
* [appstream_user_stack_association](appstream_user_stack_association.md)
* [appsync_api_cache](appsync_api_cache.md)
* [appsync_api_key](appsync_api_key.md)
* [appsync_datasource](appsync_datasource.md)
* [appsync_domain_name](appsync_domain_name.md)
* [appsync_domain_name_api_association](appsync_domain_name_api_association.md)
* [appsync_function](appsync_function.md)
* [appsync_graphql_api](appsync_graphql_api.md)
* [appsync_resolver](appsync_resolver.md)
* [appsync_type](appsync_type.md)
* [athena_data_catalog](athena_data_catalog.md)
* [athena_database](athena_database.md)
* [athena_named_query](athena_named_query.md)
* [athena_prepared_statement](athena_prepared_statement.md)
* [athena_workgroup](athena_workgroup.md)
* [auditmanager_account_registration](auditmanager_account_registration.md)
* [auditmanager_assessment](auditmanager_assessment.md)
* [auditmanager_assessment_delegation](auditmanager_assessment_delegation.md)
* [auditmanager_assessment_report](auditmanager_assessment_report.md)
* [auditmanager_control](auditmanager_control.md)
* [auditmanager_framework](auditmanager_framework.md)
* [auditmanager_framework_share](auditmanager_framework_share.md)
* [auditmanager_organization_admin_account_registration](auditmanager_organization_admin_account_registration.md)
* [autoscaling_attachment](autoscaling_attachment.md)
* [autoscaling_group](autoscaling_group.md)
* [autoscaling_group_tag](autoscaling_group_tag.md)
* [autoscaling_lifecycle_hook](autoscaling_lifecycle_hook.md)
* [autoscaling_notification](autoscaling_notification.md)
* [autoscaling_policy](autoscaling_policy.md)
* [autoscaling_schedule](autoscaling_schedule.md)
* [autoscaling_traffic_source_attachment](autoscaling_traffic_source_attachment.md)
* [autoscalingplans_scaling_plan](autoscalingplans_scaling_plan.md)
* [backup_framework](backup_framework.md)
* [backup_global_settings](backup_global_settings.md)
* [backup_plan](backup_plan.md)
* [backup_region_settings](backup_region_settings.md)
* [backup_report_plan](backup_report_plan.md)
* [backup_selection](backup_selection.md)
* [backup_vault](backup_vault.md)
* [backup_vault_lock_configuration](backup_vault_lock_configuration.md)
* [backup_vault_notifications](backup_vault_notifications.md)
* [backup_vault_policy](backup_vault_policy.md)
* [batch_compute_environment](batch_compute_environment.md)
* [batch_job_definition](batch_job_definition.md)
* [batch_job_queue](batch_job_queue.md)
* [batch_scheduling_policy](batch_scheduling_policy.md)
* [bedrock_model_invocation_logging_configuration](bedrock_model_invocation_logging_configuration.md)
* [budgets_budget](budgets_budget.md)
* [budgets_budget_action](budgets_budget_action.md)
* [ce_anomaly_monitor](ce_anomaly_monitor.md)
* [ce_anomaly_subscription](ce_anomaly_subscription.md)
* [ce_cost_allocation_tag](ce_cost_allocation_tag.md)
* [ce_cost_category](ce_cost_category.md)
* [chime_voice_connector](chime_voice_connector.md)
* [chime_voice_connector_group](chime_voice_connector_group.md)
* [chime_voice_connector_logging](chime_voice_connector_logging.md)
* [chime_voice_connector_origination](chime_voice_connector_origination.md)
* [chime_voice_connector_streaming](chime_voice_connector_streaming.md)
* [chime_voice_connector_termination](chime_voice_connector_termination.md)
* [chime_voice_connector_termination_credentials](chime_voice_connector_termination_credentials.md)
* [chimesdkmediapipelines_media_insights_pipeline_configuration](chimesdkmediapipelines_media_insights_pipeline_configuration.md)
* [chimesdkvoice_global_settings](chimesdkvoice_global_settings.md)
* [chimesdkvoice_sip_media_application](chimesdkvoice_sip_media_application.md)
* [chimesdkvoice_sip_rule](chimesdkvoice_sip_rule.md)
* [chimesdkvoice_voice_profile_domain](chimesdkvoice_voice_profile_domain.md)
* [cleanrooms_collaboration](cleanrooms_collaboration.md)
* [cleanrooms_configured_table](cleanrooms_configured_table.md)
* [cloud9_environment_ec2](cloud9_environment_ec2.md)
* [cloud9_environment_membership](cloud9_environment_membership.md)
* [cloudcontrolapi_resource](cloudcontrolapi_resource.md)
* [cloudformation_stack](cloudformation_stack.md)
* [cloudformation_stack_set](cloudformation_stack_set.md)
* [cloudformation_stack_set_instance](cloudformation_stack_set_instance.md)
* [cloudformation_type](cloudformation_type.md)
* [cloudfront_cache_policy](cloudfront_cache_policy.md)
* [cloudfront_continuous_deployment_policy](cloudfront_continuous_deployment_policy.md)
* [cloudfront_distribution](cloudfront_distribution.md)
* [cloudfront_field_level_encryption_config](cloudfront_field_level_encryption_config.md)
* [cloudfront_field_level_encryption_profile](cloudfront_field_level_encryption_profile.md)
* [cloudfront_function](cloudfront_function.md)
* [cloudfront_key_group](cloudfront_key_group.md)
* [cloudfront_monitoring_subscription](cloudfront_monitoring_subscription.md)
* [cloudfront_origin_access_control](cloudfront_origin_access_control.md)
* [cloudfront_origin_access_identity](cloudfront_origin_access_identity.md)
* [cloudfront_origin_request_policy](cloudfront_origin_request_policy.md)
* [cloudfront_public_key](cloudfront_public_key.md)
* [cloudfront_realtime_log_config](cloudfront_realtime_log_config.md)
* [cloudfront_response_headers_policy](cloudfront_response_headers_policy.md)
* [cloudhsm_v2_cluster](cloudhsm_v2_cluster.md)
* [cloudhsm_v2_hsm](cloudhsm_v2_hsm.md)
* [cloudsearch_domain](cloudsearch_domain.md)
* [cloudsearch_domain_service_access_policy](cloudsearch_domain_service_access_policy.md)
* [cloudtrail](cloudtrail.md)
* [cloudtrail_event_data_store](cloudtrail_event_data_store.md)
* [cloudwatch_composite_alarm](cloudwatch_composite_alarm.md)
* [cloudwatch_dashboard](cloudwatch_dashboard.md)
* [cloudwatch_event_api_destination](cloudwatch_event_api_destination.md)
* [cloudwatch_event_archive](cloudwatch_event_archive.md)
* [cloudwatch_event_bus](cloudwatch_event_bus.md)
* [cloudwatch_event_bus_policy](cloudwatch_event_bus_policy.md)
* [cloudwatch_event_connection](cloudwatch_event_connection.md)
* [cloudwatch_event_endpoint](cloudwatch_event_endpoint.md)
* [cloudwatch_event_permission](cloudwatch_event_permission.md)
* [cloudwatch_event_rule](cloudwatch_event_rule.md)
* [cloudwatch_event_target](cloudwatch_event_target.md)
* [cloudwatch_log_data_protection_policy](cloudwatch_log_data_protection_policy.md)
* [cloudwatch_log_destination](cloudwatch_log_destination.md)
* [cloudwatch_log_destination_policy](cloudwatch_log_destination_policy.md)
* [cloudwatch_log_group](cloudwatch_log_group.md)
* [cloudwatch_log_metric_filter](cloudwatch_log_metric_filter.md)
* [cloudwatch_log_resource_policy](cloudwatch_log_resource_policy.md)
* [cloudwatch_log_stream](cloudwatch_log_stream.md)
* [cloudwatch_log_subscription_filter](cloudwatch_log_subscription_filter.md)
* [cloudwatch_metric_alarm](cloudwatch_metric_alarm.md)
* [cloudwatch_metric_stream](cloudwatch_metric_stream.md)
* [cloudwatch_query_definition](cloudwatch_query_definition.md)
* [codeartifact_domain](codeartifact_domain.md)
* [codeartifact_domain_permissions_policy](codeartifact_domain_permissions_policy.md)
* [codeartifact_repository](codeartifact_repository.md)
* [codeartifact_repository_permissions_policy](codeartifact_repository_permissions_policy.md)
* [codebuild_project](codebuild_project.md)
* [codebuild_report_group](codebuild_report_group.md)
* [codebuild_resource_policy](codebuild_resource_policy.md)
* [codebuild_source_credential](codebuild_source_credential.md)
* [codebuild_webhook](codebuild_webhook.md)
* [codecatalyst_dev_environment](codecatalyst_dev_environment.md)
* [codecatalyst_project](codecatalyst_project.md)
* [codecatalyst_source_repository](codecatalyst_source_repository.md)
* [codecommit_approval_rule_template](codecommit_approval_rule_template.md)
* [codecommit_approval_rule_template_association](codecommit_approval_rule_template_association.md)
* [codecommit_repository](codecommit_repository.md)
* [codecommit_trigger](codecommit_trigger.md)
* [codedeploy_app](codedeploy_app.md)
* [codedeploy_deployment_config](codedeploy_deployment_config.md)
* [codedeploy_deployment_group](codedeploy_deployment_group.md)
* [codeguruprofiler_profiling_group](codeguruprofiler_profiling_group.md)
* [codegurureviewer_repository_association](codegurureviewer_repository_association.md)
* [codepipeline](codepipeline.md)
* [codepipeline_custom_action_type](codepipeline_custom_action_type.md)
* [codepipeline_webhook](codepipeline_webhook.md)
* [codestarconnections_connection](codestarconnections_connection.md)
* [codestarconnections_host](codestarconnections_host.md)
* [codestarnotifications_notification_rule](codestarnotifications_notification_rule.md)
* [cognito_identity_pool](cognito_identity_pool.md)
* [cognito_identity_pool_provider_principal_tag](cognito_identity_pool_provider_principal_tag.md)
* [cognito_identity_pool_roles_attachment](cognito_identity_pool_roles_attachment.md)
* [cognito_identity_provider](cognito_identity_provider.md)
* [cognito_managed_user_pool_client](cognito_managed_user_pool_client.md)
* [cognito_resource_server](cognito_resource_server.md)
* [cognito_risk_configuration](cognito_risk_configuration.md)
* [cognito_user](cognito_user.md)
* [cognito_user_group](cognito_user_group.md)
* [cognito_user_in_group](cognito_user_in_group.md)
* [cognito_user_pool](cognito_user_pool.md)
* [cognito_user_pool_client](cognito_user_pool_client.md)
* [cognito_user_pool_domain](cognito_user_pool_domain.md)
* [cognito_user_pool_ui_customization](cognito_user_pool_ui_customization.md)
* [comprehend_document_classifier](comprehend_document_classifier.md)
* [comprehend_entity_recognizer](comprehend_entity_recognizer.md)
* [config_aggregate_authorization](config_aggregate_authorization.md)
* [config_config_rule](config_config_rule.md)
* [config_configuration_aggregator](config_configuration_aggregator.md)
* [config_configuration_recorder](config_configuration_recorder.md)
* [config_configuration_recorder_status](config_configuration_recorder_status.md)
* [config_conformance_pack](config_conformance_pack.md)
* [config_delivery_channel](config_delivery_channel.md)
* [config_organization_conformance_pack](config_organization_conformance_pack.md)
* [config_organization_custom_policy_rule](config_organization_custom_policy_rule.md)
* [config_organization_custom_rule](config_organization_custom_rule.md)
* [config_organization_managed_rule](config_organization_managed_rule.md)
* [config_remediation_configuration](config_remediation_configuration.md)
* [connect_bot_association](connect_bot_association.md)
* [connect_contact_flow](connect_contact_flow.md)
* [connect_contact_flow_module](connect_contact_flow_module.md)
* [connect_hours_of_operation](connect_hours_of_operation.md)
* [connect_instance](connect_instance.md)
* [connect_instance_storage_config](connect_instance_storage_config.md)
* [connect_lambda_function_association](connect_lambda_function_association.md)
* [connect_phone_number](connect_phone_number.md)
* [connect_queue](connect_queue.md)
* [connect_quick_connect](connect_quick_connect.md)
* [connect_routing_profile](connect_routing_profile.md)
* [connect_security_profile](connect_security_profile.md)
* [connect_user](connect_user.md)
* [connect_user_hierarchy_group](connect_user_hierarchy_group.md)
* [connect_user_hierarchy_structure](connect_user_hierarchy_structure.md)
* [connect_vocabulary](connect_vocabulary.md)
* [controltower_control](controltower_control.md)
* [cur_report_definition](cur_report_definition.md)
* [customer_gateway](customer_gateway.md)
* [customerprofiles_domain](customerprofiles_domain.md)
* [customerprofiles_profile](customerprofiles_profile.md)
* [data](data/index.md)
* [dataexchange_data_set](dataexchange_data_set.md)
* [dataexchange_revision](dataexchange_revision.md)
* [datapipeline_pipeline](datapipeline_pipeline.md)
* [datapipeline_pipeline_definition](datapipeline_pipeline_definition.md)
* [datasync_agent](datasync_agent.md)
* [datasync_location_azure_blob](datasync_location_azure_blob.md)
* [datasync_location_efs](datasync_location_efs.md)
* [datasync_location_fsx_lustre_file_system](datasync_location_fsx_lustre_file_system.md)
* [datasync_location_fsx_ontap_file_system](datasync_location_fsx_ontap_file_system.md)
* [datasync_location_fsx_openzfs_file_system](datasync_location_fsx_openzfs_file_system.md)
* [datasync_location_fsx_windows_file_system](datasync_location_fsx_windows_file_system.md)
* [datasync_location_hdfs](datasync_location_hdfs.md)
* [datasync_location_nfs](datasync_location_nfs.md)
* [datasync_location_object_storage](datasync_location_object_storage.md)
* [datasync_location_s3](datasync_location_s3.md)
* [datasync_location_smb](datasync_location_smb.md)
* [datasync_task](datasync_task.md)
* [dax_cluster](dax_cluster.md)
* [dax_parameter_group](dax_parameter_group.md)
* [dax_subnet_group](dax_subnet_group.md)
* [db_cluster_snapshot](db_cluster_snapshot.md)
* [db_event_subscription](db_event_subscription.md)
* [db_instance](db_instance.md)
* [db_instance_automated_backups_replication](db_instance_automated_backups_replication.md)
* [db_instance_role_association](db_instance_role_association.md)
* [db_option_group](db_option_group.md)
* [db_parameter_group](db_parameter_group.md)
* [db_proxy](db_proxy.md)
* [db_proxy_default_target_group](db_proxy_default_target_group.md)
* [db_proxy_endpoint](db_proxy_endpoint.md)
* [db_proxy_target](db_proxy_target.md)
* [db_snapshot](db_snapshot.md)
* [db_snapshot_copy](db_snapshot_copy.md)
* [db_subnet_group](db_subnet_group.md)
* [default_network_acl](default_network_acl.md)
* [default_route_table](default_route_table.md)
* [default_security_group](default_security_group.md)
* [default_subnet](default_subnet.md)
* [default_vpc](default_vpc.md)
* [default_vpc_dhcp_options](default_vpc_dhcp_options.md)
* [detective_graph](detective_graph.md)
* [detective_invitation_accepter](detective_invitation_accepter.md)
* [detective_member](detective_member.md)
* [detective_organization_admin_account](detective_organization_admin_account.md)
* [detective_organization_configuration](detective_organization_configuration.md)
* [devicefarm_device_pool](devicefarm_device_pool.md)
* [devicefarm_instance_profile](devicefarm_instance_profile.md)
* [devicefarm_network_profile](devicefarm_network_profile.md)
* [devicefarm_project](devicefarm_project.md)
* [devicefarm_test_grid_project](devicefarm_test_grid_project.md)
* [devicefarm_upload](devicefarm_upload.md)
* [directory_service_conditional_forwarder](directory_service_conditional_forwarder.md)
* [directory_service_directory](directory_service_directory.md)
* [directory_service_log_subscription](directory_service_log_subscription.md)
* [directory_service_radius_settings](directory_service_radius_settings.md)
* [directory_service_region](directory_service_region.md)
* [directory_service_shared_directory](directory_service_shared_directory.md)
* [directory_service_shared_directory_accepter](directory_service_shared_directory_accepter.md)
* [directory_service_trust](directory_service_trust.md)
* [dlm_lifecycle_policy](dlm_lifecycle_policy.md)
* [dms_certificate](dms_certificate.md)
* [dms_endpoint](dms_endpoint.md)
* [dms_event_subscription](dms_event_subscription.md)
* [dms_replication_config](dms_replication_config.md)
* [dms_replication_instance](dms_replication_instance.md)
* [dms_replication_subnet_group](dms_replication_subnet_group.md)
* [dms_replication_task](dms_replication_task.md)
* [dms_s3_endpoint](dms_s3_endpoint.md)
* [docdb_cluster](docdb_cluster.md)
* [docdb_cluster_instance](docdb_cluster_instance.md)
* [docdb_cluster_parameter_group](docdb_cluster_parameter_group.md)
* [docdb_cluster_snapshot](docdb_cluster_snapshot.md)
* [docdb_event_subscription](docdb_event_subscription.md)
* [docdb_global_cluster](docdb_global_cluster.md)
* [docdb_subnet_group](docdb_subnet_group.md)
* [docdbelastic_cluster](docdbelastic_cluster.md)
* [dx_bgp_peer](dx_bgp_peer.md)
* [dx_connection](dx_connection.md)
* [dx_connection_association](dx_connection_association.md)
* [dx_connection_confirmation](dx_connection_confirmation.md)
* [dx_gateway](dx_gateway.md)
* [dx_gateway_association](dx_gateway_association.md)
* [dx_gateway_association_proposal](dx_gateway_association_proposal.md)
* [dx_hosted_connection](dx_hosted_connection.md)
* [dx_hosted_private_virtual_interface](dx_hosted_private_virtual_interface.md)
* [dx_hosted_private_virtual_interface_accepter](dx_hosted_private_virtual_interface_accepter.md)
* [dx_hosted_public_virtual_interface](dx_hosted_public_virtual_interface.md)
* [dx_hosted_public_virtual_interface_accepter](dx_hosted_public_virtual_interface_accepter.md)
* [dx_hosted_transit_virtual_interface](dx_hosted_transit_virtual_interface.md)
* [dx_hosted_transit_virtual_interface_accepter](dx_hosted_transit_virtual_interface_accepter.md)
* [dx_lag](dx_lag.md)
* [dx_macsec_key_association](dx_macsec_key_association.md)
* [dx_private_virtual_interface](dx_private_virtual_interface.md)
* [dx_public_virtual_interface](dx_public_virtual_interface.md)
* [dx_transit_virtual_interface](dx_transit_virtual_interface.md)
* [dynamodb_contributor_insights](dynamodb_contributor_insights.md)
* [dynamodb_global_table](dynamodb_global_table.md)
* [dynamodb_kinesis_streaming_destination](dynamodb_kinesis_streaming_destination.md)
* [dynamodb_table](dynamodb_table.md)
* [dynamodb_table_item](dynamodb_table_item.md)
* [dynamodb_table_replica](dynamodb_table_replica.md)
* [dynamodb_tag](dynamodb_tag.md)
* [ebs_default_kms_key](ebs_default_kms_key.md)
* [ebs_encryption_by_default](ebs_encryption_by_default.md)
* [ebs_fast_snapshot_restore](ebs_fast_snapshot_restore.md)
* [ebs_snapshot](ebs_snapshot.md)
* [ebs_snapshot_copy](ebs_snapshot_copy.md)
* [ebs_snapshot_import](ebs_snapshot_import.md)
* [ebs_volume](ebs_volume.md)
* [ec2_availability_zone_group](ec2_availability_zone_group.md)
* [ec2_capacity_reservation](ec2_capacity_reservation.md)
* [ec2_carrier_gateway](ec2_carrier_gateway.md)
* [ec2_client_vpn_authorization_rule](ec2_client_vpn_authorization_rule.md)
* [ec2_client_vpn_endpoint](ec2_client_vpn_endpoint.md)
* [ec2_client_vpn_network_association](ec2_client_vpn_network_association.md)
* [ec2_client_vpn_route](ec2_client_vpn_route.md)
* [ec2_fleet](ec2_fleet.md)
* [ec2_host](ec2_host.md)
* [ec2_image_block_public_access](ec2_image_block_public_access.md)
* [ec2_instance_connect_endpoint](ec2_instance_connect_endpoint.md)
* [ec2_instance_state](ec2_instance_state.md)
* [ec2_local_gateway_route](ec2_local_gateway_route.md)
* [ec2_local_gateway_route_table_vpc_association](ec2_local_gateway_route_table_vpc_association.md)
* [ec2_managed_prefix_list](ec2_managed_prefix_list.md)
* [ec2_managed_prefix_list_entry](ec2_managed_prefix_list_entry.md)
* [ec2_network_insights_analysis](ec2_network_insights_analysis.md)
* [ec2_network_insights_path](ec2_network_insights_path.md)
* [ec2_serial_console_access](ec2_serial_console_access.md)
* [ec2_subnet_cidr_reservation](ec2_subnet_cidr_reservation.md)
* [ec2_tag](ec2_tag.md)
* [ec2_traffic_mirror_filter](ec2_traffic_mirror_filter.md)
* [ec2_traffic_mirror_filter_rule](ec2_traffic_mirror_filter_rule.md)
* [ec2_traffic_mirror_session](ec2_traffic_mirror_session.md)
* [ec2_traffic_mirror_target](ec2_traffic_mirror_target.md)
* [ec2_transit_gateway](ec2_transit_gateway.md)
* [ec2_transit_gateway_connect](ec2_transit_gateway_connect.md)
* [ec2_transit_gateway_connect_peer](ec2_transit_gateway_connect_peer.md)
* [ec2_transit_gateway_multicast_domain](ec2_transit_gateway_multicast_domain.md)
* [ec2_transit_gateway_multicast_domain_association](ec2_transit_gateway_multicast_domain_association.md)
* [ec2_transit_gateway_multicast_group_member](ec2_transit_gateway_multicast_group_member.md)
* [ec2_transit_gateway_multicast_group_source](ec2_transit_gateway_multicast_group_source.md)
* [ec2_transit_gateway_peering_attachment](ec2_transit_gateway_peering_attachment.md)
* [ec2_transit_gateway_peering_attachment_accepter](ec2_transit_gateway_peering_attachment_accepter.md)
* [ec2_transit_gateway_policy_table](ec2_transit_gateway_policy_table.md)
* [ec2_transit_gateway_policy_table_association](ec2_transit_gateway_policy_table_association.md)
* [ec2_transit_gateway_prefix_list_reference](ec2_transit_gateway_prefix_list_reference.md)
* [ec2_transit_gateway_route](ec2_transit_gateway_route.md)
* [ec2_transit_gateway_route_table](ec2_transit_gateway_route_table.md)
* [ec2_transit_gateway_route_table_association](ec2_transit_gateway_route_table_association.md)
* [ec2_transit_gateway_route_table_propagation](ec2_transit_gateway_route_table_propagation.md)
* [ec2_transit_gateway_vpc_attachment](ec2_transit_gateway_vpc_attachment.md)
* [ec2_transit_gateway_vpc_attachment_accepter](ec2_transit_gateway_vpc_attachment_accepter.md)
* [ecr_lifecycle_policy](ecr_lifecycle_policy.md)
* [ecr_pull_through_cache_rule](ecr_pull_through_cache_rule.md)
* [ecr_registry_policy](ecr_registry_policy.md)
* [ecr_registry_scanning_configuration](ecr_registry_scanning_configuration.md)
* [ecr_replication_configuration](ecr_replication_configuration.md)
* [ecr_repository](ecr_repository.md)
* [ecr_repository_policy](ecr_repository_policy.md)
* [ecrpublic_repository](ecrpublic_repository.md)
* [ecrpublic_repository_policy](ecrpublic_repository_policy.md)
* [ecs_account_setting_default](ecs_account_setting_default.md)
* [ecs_capacity_provider](ecs_capacity_provider.md)
* [ecs_cluster](ecs_cluster.md)
* [ecs_cluster_capacity_providers](ecs_cluster_capacity_providers.md)
* [ecs_service](ecs_service.md)
* [ecs_tag](ecs_tag.md)
* [ecs_task_definition](ecs_task_definition.md)
* [ecs_task_set](ecs_task_set.md)
* [efs_access_point](efs_access_point.md)
* [efs_backup_policy](efs_backup_policy.md)
* [efs_file_system](efs_file_system.md)
* [efs_file_system_policy](efs_file_system_policy.md)
* [efs_mount_target](efs_mount_target.md)
* [efs_replication_configuration](efs_replication_configuration.md)
* [egress_only_internet_gateway](egress_only_internet_gateway.md)
* [eip](eip.md)
* [eip_association](eip_association.md)
* [eks_access_entry](eks_access_entry.md)
* [eks_access_policy_association](eks_access_policy_association.md)
* [eks_addon](eks_addon.md)
* [eks_cluster](eks_cluster.md)
* [eks_fargate_profile](eks_fargate_profile.md)
* [eks_identity_provider_config](eks_identity_provider_config.md)
* [eks_node_group](eks_node_group.md)
* [eks_pod_identity_association](eks_pod_identity_association.md)
* [elastic_beanstalk_application](elastic_beanstalk_application.md)
* [elastic_beanstalk_application_version](elastic_beanstalk_application_version.md)
* [elastic_beanstalk_configuration_template](elastic_beanstalk_configuration_template.md)
* [elastic_beanstalk_environment](elastic_beanstalk_environment.md)
* [elasticache_cluster](elasticache_cluster.md)
* [elasticache_global_replication_group](elasticache_global_replication_group.md)
* [elasticache_parameter_group](elasticache_parameter_group.md)
* [elasticache_replication_group](elasticache_replication_group.md)
* [elasticache_serverless_cache](elasticache_serverless_cache.md)
* [elasticache_subnet_group](elasticache_subnet_group.md)
* [elasticache_user](elasticache_user.md)
* [elasticache_user_group](elasticache_user_group.md)
* [elasticache_user_group_association](elasticache_user_group_association.md)
* [elasticsearch_domain](elasticsearch_domain.md)
* [elasticsearch_domain_policy](elasticsearch_domain_policy.md)
* [elasticsearch_domain_saml_options](elasticsearch_domain_saml_options.md)
* [elasticsearch_vpc_endpoint](elasticsearch_vpc_endpoint.md)
* [elastictranscoder_pipeline](elastictranscoder_pipeline.md)
* [elastictranscoder_preset](elastictranscoder_preset.md)
* [elb](elb.md)
* [elb_attachment](elb_attachment.md)
* [emr_block_public_access_configuration](emr_block_public_access_configuration.md)
* [emr_cluster](emr_cluster.md)
* [emr_instance_fleet](emr_instance_fleet.md)
* [emr_instance_group](emr_instance_group.md)
* [emr_managed_scaling_policy](emr_managed_scaling_policy.md)
* [emr_security_configuration](emr_security_configuration.md)
* [emr_studio](emr_studio.md)
* [emr_studio_session_mapping](emr_studio_session_mapping.md)
* [emrcontainers_job_template](emrcontainers_job_template.md)
* [emrcontainers_virtual_cluster](emrcontainers_virtual_cluster.md)
* [emrserverless_application](emrserverless_application.md)
* [evidently_feature](evidently_feature.md)
* [evidently_launch](evidently_launch.md)
* [evidently_project](evidently_project.md)
* [evidently_segment](evidently_segment.md)
* [finspace_kx_cluster](finspace_kx_cluster.md)
* [finspace_kx_database](finspace_kx_database.md)
* [finspace_kx_dataview](finspace_kx_dataview.md)
* [finspace_kx_environment](finspace_kx_environment.md)
* [finspace_kx_scaling_group](finspace_kx_scaling_group.md)
* [finspace_kx_user](finspace_kx_user.md)
* [finspace_kx_volume](finspace_kx_volume.md)
* [fis_experiment_template](fis_experiment_template.md)
* [flow_log](flow_log.md)
* [fms_admin_account](fms_admin_account.md)
* [fms_policy](fms_policy.md)
* [fsx_backup](fsx_backup.md)
* [fsx_data_repository_association](fsx_data_repository_association.md)
* [fsx_file_cache](fsx_file_cache.md)
* [fsx_lustre_file_system](fsx_lustre_file_system.md)
* [fsx_ontap_file_system](fsx_ontap_file_system.md)
* [fsx_ontap_storage_virtual_machine](fsx_ontap_storage_virtual_machine.md)
* [fsx_ontap_volume](fsx_ontap_volume.md)
* [fsx_openzfs_file_system](fsx_openzfs_file_system.md)
* [fsx_openzfs_snapshot](fsx_openzfs_snapshot.md)
* [fsx_openzfs_volume](fsx_openzfs_volume.md)
* [fsx_windows_file_system](fsx_windows_file_system.md)
* [gamelift_alias](gamelift_alias.md)
* [gamelift_build](gamelift_build.md)
* [gamelift_fleet](gamelift_fleet.md)
* [gamelift_game_server_group](gamelift_game_server_group.md)
* [gamelift_game_session_queue](gamelift_game_session_queue.md)
* [gamelift_script](gamelift_script.md)
* [glacier_vault](glacier_vault.md)
* [glacier_vault_lock](glacier_vault_lock.md)
* [globalaccelerator_accelerator](globalaccelerator_accelerator.md)
* [globalaccelerator_custom_routing_accelerator](globalaccelerator_custom_routing_accelerator.md)
* [globalaccelerator_custom_routing_endpoint_group](globalaccelerator_custom_routing_endpoint_group.md)
* [globalaccelerator_custom_routing_listener](globalaccelerator_custom_routing_listener.md)
* [globalaccelerator_endpoint_group](globalaccelerator_endpoint_group.md)
* [globalaccelerator_listener](globalaccelerator_listener.md)
* [glue_catalog_database](glue_catalog_database.md)
* [glue_catalog_table](glue_catalog_table.md)
* [glue_classifier](glue_classifier.md)
* [glue_connection](glue_connection.md)
* [glue_crawler](glue_crawler.md)
* [glue_data_catalog_encryption_settings](glue_data_catalog_encryption_settings.md)
* [glue_data_quality_ruleset](glue_data_quality_ruleset.md)
* [glue_dev_endpoint](glue_dev_endpoint.md)
* [glue_job](glue_job.md)
* [glue_ml_transform](glue_ml_transform.md)
* [glue_partition](glue_partition.md)
* [glue_partition_index](glue_partition_index.md)
* [glue_registry](glue_registry.md)
* [glue_resource_policy](glue_resource_policy.md)
* [glue_schema](glue_schema.md)
* [glue_security_configuration](glue_security_configuration.md)
* [glue_trigger](glue_trigger.md)
* [glue_user_defined_function](glue_user_defined_function.md)
* [glue_workflow](glue_workflow.md)
* [grafana_license_association](grafana_license_association.md)
* [grafana_role_association](grafana_role_association.md)
* [grafana_workspace](grafana_workspace.md)
* [grafana_workspace_api_key](grafana_workspace_api_key.md)
* [grafana_workspace_saml_configuration](grafana_workspace_saml_configuration.md)
* [guardduty_detector](guardduty_detector.md)
* [guardduty_detector_feature](guardduty_detector_feature.md)
* [guardduty_filter](guardduty_filter.md)
* [guardduty_invite_accepter](guardduty_invite_accepter.md)
* [guardduty_ipset](guardduty_ipset.md)
* [guardduty_member](guardduty_member.md)
* [guardduty_organization_admin_account](guardduty_organization_admin_account.md)
* [guardduty_organization_configuration](guardduty_organization_configuration.md)
* [guardduty_organization_configuration_feature](guardduty_organization_configuration_feature.md)
* [guardduty_publishing_destination](guardduty_publishing_destination.md)
* [guardduty_threatintelset](guardduty_threatintelset.md)
* [iam_access_key](iam_access_key.md)
* [iam_account_alias](iam_account_alias.md)
* [iam_account_password_policy](iam_account_password_policy.md)
* [iam_group](iam_group.md)
* [iam_group_membership](iam_group_membership.md)
* [iam_group_policy](iam_group_policy.md)
* [iam_group_policy_attachment](iam_group_policy_attachment.md)
* [iam_instance_profile](iam_instance_profile.md)
* [iam_openid_connect_provider](iam_openid_connect_provider.md)
* [iam_policy](iam_policy.md)
* [iam_policy_attachment](iam_policy_attachment.md)
* [iam_role](iam_role.md)
* [iam_role_policy](iam_role_policy.md)
* [iam_role_policy_attachment](iam_role_policy_attachment.md)
* [iam_saml_provider](iam_saml_provider.md)
* [iam_security_token_service_preferences](iam_security_token_service_preferences.md)
* [iam_server_certificate](iam_server_certificate.md)
* [iam_service_linked_role](iam_service_linked_role.md)
* [iam_service_specific_credential](iam_service_specific_credential.md)
* [iam_signing_certificate](iam_signing_certificate.md)
* [iam_user](iam_user.md)
* [iam_user_group_membership](iam_user_group_membership.md)
* [iam_user_login_profile](iam_user_login_profile.md)
* [iam_user_policy](iam_user_policy.md)
* [iam_user_policy_attachment](iam_user_policy_attachment.md)
* [iam_user_ssh_key](iam_user_ssh_key.md)
* [iam_virtual_mfa_device](iam_virtual_mfa_device.md)
* [identitystore_group](identitystore_group.md)
* [identitystore_group_membership](identitystore_group_membership.md)
* [identitystore_user](identitystore_user.md)
* [imagebuilder_component](imagebuilder_component.md)
* [imagebuilder_container_recipe](imagebuilder_container_recipe.md)
* [imagebuilder_distribution_configuration](imagebuilder_distribution_configuration.md)
* [imagebuilder_image](imagebuilder_image.md)
* [imagebuilder_image_pipeline](imagebuilder_image_pipeline.md)
* [imagebuilder_image_recipe](imagebuilder_image_recipe.md)
* [imagebuilder_infrastructure_configuration](imagebuilder_infrastructure_configuration.md)
* [imagebuilder_workflow](imagebuilder_workflow.md)
* [inspector2_delegated_admin_account](inspector2_delegated_admin_account.md)
* [inspector2_enabler](inspector2_enabler.md)
* [inspector2_member_association](inspector2_member_association.md)
* [inspector2_organization_configuration](inspector2_organization_configuration.md)
* [inspector_assessment_target](inspector_assessment_target.md)
* [inspector_assessment_template](inspector_assessment_template.md)
* [inspector_resource_group](inspector_resource_group.md)
* [instance](instance.md)
* [internet_gateway](internet_gateway.md)
* [internet_gateway_attachment](internet_gateway_attachment.md)
* [internetmonitor_monitor](internetmonitor_monitor.md)
* [iot_authorizer](iot_authorizer.md)
* [iot_billing_group](iot_billing_group.md)
* [iot_ca_certificate](iot_ca_certificate.md)
* [iot_certificate](iot_certificate.md)
* [iot_domain_configuration](iot_domain_configuration.md)
* [iot_event_configurations](iot_event_configurations.md)
* [iot_indexing_configuration](iot_indexing_configuration.md)
* [iot_logging_options](iot_logging_options.md)
* [iot_policy](iot_policy.md)
* [iot_policy_attachment](iot_policy_attachment.md)
* [iot_provisioning_template](iot_provisioning_template.md)
* [iot_role_alias](iot_role_alias.md)
* [iot_thing](iot_thing.md)
* [iot_thing_group](iot_thing_group.md)
* [iot_thing_group_membership](iot_thing_group_membership.md)
* [iot_thing_principal_attachment](iot_thing_principal_attachment.md)
* [iot_thing_type](iot_thing_type.md)
* [iot_topic_rule](iot_topic_rule.md)
* [iot_topic_rule_destination](iot_topic_rule_destination.md)
* [ivs_channel](ivs_channel.md)
* [ivs_playback_key_pair](ivs_playback_key_pair.md)
* [ivs_recording_configuration](ivs_recording_configuration.md)
* [ivschat_logging_configuration](ivschat_logging_configuration.md)
* [ivschat_room](ivschat_room.md)
* [kendra_data_source](kendra_data_source.md)
* [kendra_experience](kendra_experience.md)
* [kendra_faq](kendra_faq.md)
* [kendra_index](kendra_index.md)
* [kendra_query_suggestions_block_list](kendra_query_suggestions_block_list.md)
* [kendra_thesaurus](kendra_thesaurus.md)
* [key_pair](key_pair.md)
* [keyspaces_keyspace](keyspaces_keyspace.md)
* [keyspaces_table](keyspaces_table.md)
* [kinesis_analytics_application](kinesis_analytics_application.md)
* [kinesis_firehose_delivery_stream](kinesis_firehose_delivery_stream.md)
* [kinesis_resource_policy](kinesis_resource_policy.md)
* [kinesis_stream](kinesis_stream.md)
* [kinesis_stream_consumer](kinesis_stream_consumer.md)
* [kinesis_video_stream](kinesis_video_stream.md)
* [kinesisanalyticsv2_application](kinesisanalyticsv2_application.md)
* [kinesisanalyticsv2_application_snapshot](kinesisanalyticsv2_application_snapshot.md)
* [kms_alias](kms_alias.md)
* [kms_ciphertext](kms_ciphertext.md)
* [kms_custom_key_store](kms_custom_key_store.md)
* [kms_external_key](kms_external_key.md)
* [kms_grant](kms_grant.md)
* [kms_key](kms_key.md)
* [kms_key_policy](kms_key_policy.md)
* [kms_replica_external_key](kms_replica_external_key.md)
* [kms_replica_key](kms_replica_key.md)
* [lakeformation_data_lake_settings](lakeformation_data_lake_settings.md)
* [lakeformation_lf_tag](lakeformation_lf_tag.md)
* [lakeformation_permissions](lakeformation_permissions.md)
* [lakeformation_resource](lakeformation_resource.md)
* [lakeformation_resource_lf_tags](lakeformation_resource_lf_tags.md)
* [lambda_alias](lambda_alias.md)
* [lambda_code_signing_config](lambda_code_signing_config.md)
* [lambda_event_source_mapping](lambda_event_source_mapping.md)
* [lambda_function](lambda_function.md)
* [lambda_function_event_invoke_config](lambda_function_event_invoke_config.md)
* [lambda_function_url](lambda_function_url.md)
* [lambda_invocation](lambda_invocation.md)
* [lambda_layer_version](lambda_layer_version.md)
* [lambda_layer_version_permission](lambda_layer_version_permission.md)
* [lambda_permission](lambda_permission.md)
* [lambda_provisioned_concurrency_config](lambda_provisioned_concurrency_config.md)
* [launch_configuration](launch_configuration.md)
* [launch_template](launch_template.md)
* [lb](lb.md)
* [lb_cookie_stickiness_policy](lb_cookie_stickiness_policy.md)
* [lb_listener](lb_listener.md)
* [lb_listener_certificate](lb_listener_certificate.md)
* [lb_listener_rule](lb_listener_rule.md)
* [lb_ssl_negotiation_policy](lb_ssl_negotiation_policy.md)
* [lb_target_group](lb_target_group.md)
* [lb_target_group_attachment](lb_target_group_attachment.md)
* [lb_trust_store](lb_trust_store.md)
* [lb_trust_store_revocation](lb_trust_store_revocation.md)
* [lex_bot](lex_bot.md)
* [lex_bot_alias](lex_bot_alias.md)
* [lex_intent](lex_intent.md)
* [lex_slot_type](lex_slot_type.md)
* [lexv2models_bot](lexv2models_bot.md)
* [lexv2models_bot_locale](lexv2models_bot_locale.md)
* [lexv2models_bot_version](lexv2models_bot_version.md)
* [lexv2models_intent](lexv2models_intent.md)
* [licensemanager_association](licensemanager_association.md)
* [licensemanager_grant](licensemanager_grant.md)
* [licensemanager_grant_accepter](licensemanager_grant_accepter.md)
* [licensemanager_license_configuration](licensemanager_license_configuration.md)
* [lightsail_bucket](lightsail_bucket.md)
* [lightsail_bucket_access_key](lightsail_bucket_access_key.md)
* [lightsail_bucket_resource_access](lightsail_bucket_resource_access.md)
* [lightsail_certificate](lightsail_certificate.md)
* [lightsail_container_service](lightsail_container_service.md)
* [lightsail_container_service_deployment_version](lightsail_container_service_deployment_version.md)
* [lightsail_database](lightsail_database.md)
* [lightsail_disk](lightsail_disk.md)
* [lightsail_disk_attachment](lightsail_disk_attachment.md)
* [lightsail_distribution](lightsail_distribution.md)
* [lightsail_domain](lightsail_domain.md)
* [lightsail_domain_entry](lightsail_domain_entry.md)
* [lightsail_instance](lightsail_instance.md)
* [lightsail_instance_public_ports](lightsail_instance_public_ports.md)
* [lightsail_key_pair](lightsail_key_pair.md)
* [lightsail_lb](lightsail_lb.md)
* [lightsail_lb_attachment](lightsail_lb_attachment.md)
* [lightsail_lb_certificate](lightsail_lb_certificate.md)
* [lightsail_lb_certificate_attachment](lightsail_lb_certificate_attachment.md)
* [lightsail_lb_https_redirection_policy](lightsail_lb_https_redirection_policy.md)
* [lightsail_lb_stickiness_policy](lightsail_lb_stickiness_policy.md)
* [lightsail_static_ip](lightsail_static_ip.md)
* [lightsail_static_ip_attachment](lightsail_static_ip_attachment.md)
* [load_balancer_backend_server_policy](load_balancer_backend_server_policy.md)
* [load_balancer_listener_policy](load_balancer_listener_policy.md)
* [load_balancer_policy](load_balancer_policy.md)
* [location_geofence_collection](location_geofence_collection.md)
* [location_map](location_map.md)
* [location_place_index](location_place_index.md)
* [location_route_calculator](location_route_calculator.md)
* [location_tracker](location_tracker.md)
* [location_tracker_association](location_tracker_association.md)
* [macie2_account](macie2_account.md)
* [macie2_classification_export_configuration](macie2_classification_export_configuration.md)
* [macie2_classification_job](macie2_classification_job.md)
* [macie2_custom_data_identifier](macie2_custom_data_identifier.md)
* [macie2_findings_filter](macie2_findings_filter.md)
* [macie2_invitation_accepter](macie2_invitation_accepter.md)
* [macie2_member](macie2_member.md)
* [macie2_organization_admin_account](macie2_organization_admin_account.md)
* [main_route_table_association](main_route_table_association.md)
* [media_convert_queue](media_convert_queue.md)
* [media_package_channel](media_package_channel.md)
* [media_store_container](media_store_container.md)
* [media_store_container_policy](media_store_container_policy.md)
* [medialive_channel](medialive_channel.md)
* [medialive_input](medialive_input.md)
* [medialive_input_security_group](medialive_input_security_group.md)
* [medialive_multiplex](medialive_multiplex.md)
* [medialive_multiplex_program](medialive_multiplex_program.md)
* [memorydb_acl](memorydb_acl.md)
* [memorydb_cluster](memorydb_cluster.md)
* [memorydb_parameter_group](memorydb_parameter_group.md)
* [memorydb_snapshot](memorydb_snapshot.md)
* [memorydb_subnet_group](memorydb_subnet_group.md)
* [memorydb_user](memorydb_user.md)
* [mq_broker](mq_broker.md)
* [mq_configuration](mq_configuration.md)
* [msk_cluster](msk_cluster.md)
* [msk_cluster_policy](msk_cluster_policy.md)
* [msk_configuration](msk_configuration.md)
* [msk_replicator](msk_replicator.md)
* [msk_scram_secret_association](msk_scram_secret_association.md)
* [msk_serverless_cluster](msk_serverless_cluster.md)
* [msk_vpc_connection](msk_vpc_connection.md)
* [mskconnect_connector](mskconnect_connector.md)
* [mskconnect_custom_plugin](mskconnect_custom_plugin.md)
* [mskconnect_worker_configuration](mskconnect_worker_configuration.md)
* [mwaa_environment](mwaa_environment.md)
* [nat_gateway](nat_gateway.md)
* [neptune_cluster](neptune_cluster.md)
* [neptune_cluster_endpoint](neptune_cluster_endpoint.md)
* [neptune_cluster_instance](neptune_cluster_instance.md)
* [neptune_cluster_parameter_group](neptune_cluster_parameter_group.md)
* [neptune_cluster_snapshot](neptune_cluster_snapshot.md)
* [neptune_event_subscription](neptune_event_subscription.md)
* [neptune_global_cluster](neptune_global_cluster.md)
* [neptune_parameter_group](neptune_parameter_group.md)
* [neptune_subnet_group](neptune_subnet_group.md)
* [network_acl](network_acl.md)
* [network_acl_association](network_acl_association.md)
* [network_acl_rule](network_acl_rule.md)
* [network_interface](network_interface.md)
* [network_interface_attachment](network_interface_attachment.md)
* [network_interface_sg_attachment](network_interface_sg_attachment.md)
* [networkfirewall_firewall](networkfirewall_firewall.md)
* [networkfirewall_firewall_policy](networkfirewall_firewall_policy.md)
* [networkfirewall_logging_configuration](networkfirewall_logging_configuration.md)
* [networkfirewall_resource_policy](networkfirewall_resource_policy.md)
* [networkfirewall_rule_group](networkfirewall_rule_group.md)
* [networkmanager_attachment_accepter](networkmanager_attachment_accepter.md)
* [networkmanager_connect_attachment](networkmanager_connect_attachment.md)
* [networkmanager_connect_peer](networkmanager_connect_peer.md)
* [networkmanager_connection](networkmanager_connection.md)
* [networkmanager_core_network](networkmanager_core_network.md)
* [networkmanager_core_network_policy_attachment](networkmanager_core_network_policy_attachment.md)
* [networkmanager_customer_gateway_association](networkmanager_customer_gateway_association.md)
* [networkmanager_device](networkmanager_device.md)
* [networkmanager_global_network](networkmanager_global_network.md)
* [networkmanager_link](networkmanager_link.md)
* [networkmanager_link_association](networkmanager_link_association.md)
* [networkmanager_site](networkmanager_site.md)
* [networkmanager_site_to_site_vpn_attachment](networkmanager_site_to_site_vpn_attachment.md)
* [networkmanager_transit_gateway_connect_peer_association](networkmanager_transit_gateway_connect_peer_association.md)
* [networkmanager_transit_gateway_peering](networkmanager_transit_gateway_peering.md)
* [networkmanager_transit_gateway_registration](networkmanager_transit_gateway_registration.md)
* [networkmanager_transit_gateway_route_table_attachment](networkmanager_transit_gateway_route_table_attachment.md)
* [networkmanager_vpc_attachment](networkmanager_vpc_attachment.md)
* [oam_link](oam_link.md)
* [oam_sink](oam_sink.md)
* [oam_sink_policy](oam_sink_policy.md)
* [opensearch_domain](opensearch_domain.md)
* [opensearch_domain_policy](opensearch_domain_policy.md)
* [opensearch_domain_saml_options](opensearch_domain_saml_options.md)
* [opensearch_inbound_connection_accepter](opensearch_inbound_connection_accepter.md)
* [opensearch_outbound_connection](opensearch_outbound_connection.md)
* [opensearch_package](opensearch_package.md)
* [opensearch_package_association](opensearch_package_association.md)
* [opensearch_vpc_endpoint](opensearch_vpc_endpoint.md)
* [opensearchserverless_access_policy](opensearchserverless_access_policy.md)
* [opensearchserverless_collection](opensearchserverless_collection.md)
* [opensearchserverless_lifecycle_policy](opensearchserverless_lifecycle_policy.md)
* [opensearchserverless_security_config](opensearchserverless_security_config.md)
* [opensearchserverless_security_policy](opensearchserverless_security_policy.md)
* [opensearchserverless_vpc_endpoint](opensearchserverless_vpc_endpoint.md)
* [opsworks_application](opsworks_application.md)
* [opsworks_custom_layer](opsworks_custom_layer.md)
* [opsworks_ecs_cluster_layer](opsworks_ecs_cluster_layer.md)
* [opsworks_ganglia_layer](opsworks_ganglia_layer.md)
* [opsworks_haproxy_layer](opsworks_haproxy_layer.md)
* [opsworks_instance](opsworks_instance.md)
* [opsworks_java_app_layer](opsworks_java_app_layer.md)
* [opsworks_memcached_layer](opsworks_memcached_layer.md)
* [opsworks_mysql_layer](opsworks_mysql_layer.md)
* [opsworks_nodejs_app_layer](opsworks_nodejs_app_layer.md)
* [opsworks_permission](opsworks_permission.md)
* [opsworks_php_app_layer](opsworks_php_app_layer.md)
* [opsworks_rails_app_layer](opsworks_rails_app_layer.md)
* [opsworks_rds_db_instance](opsworks_rds_db_instance.md)
* [opsworks_stack](opsworks_stack.md)
* [opsworks_static_web_layer](opsworks_static_web_layer.md)
* [opsworks_user_profile](opsworks_user_profile.md)
* [organizations_account](organizations_account.md)
* [organizations_delegated_administrator](organizations_delegated_administrator.md)
* [organizations_organization](organizations_organization.md)
* [organizations_organizational_unit](organizations_organizational_unit.md)
* [organizations_policy](organizations_policy.md)
* [organizations_policy_attachment](organizations_policy_attachment.md)
* [organizations_resource_policy](organizations_resource_policy.md)
* [pinpoint_adm_channel](pinpoint_adm_channel.md)
* [pinpoint_apns_channel](pinpoint_apns_channel.md)
* [pinpoint_apns_sandbox_channel](pinpoint_apns_sandbox_channel.md)
* [pinpoint_apns_voip_channel](pinpoint_apns_voip_channel.md)
* [pinpoint_apns_voip_sandbox_channel](pinpoint_apns_voip_sandbox_channel.md)
* [pinpoint_app](pinpoint_app.md)
* [pinpoint_baidu_channel](pinpoint_baidu_channel.md)
* [pinpoint_email_channel](pinpoint_email_channel.md)
* [pinpoint_event_stream](pinpoint_event_stream.md)
* [pinpoint_gcm_channel](pinpoint_gcm_channel.md)
* [pinpoint_sms_channel](pinpoint_sms_channel.md)
* [pipes_pipe](pipes_pipe.md)
* [placement_group](placement_group.md)
* [prometheus_alert_manager_definition](prometheus_alert_manager_definition.md)
* [prometheus_rule_group_namespace](prometheus_rule_group_namespace.md)
* [prometheus_scraper](prometheus_scraper.md)
* [prometheus_workspace](prometheus_workspace.md)
* [provider](provider.md)
* [proxy_protocol_policy](proxy_protocol_policy.md)
* [qldb_ledger](qldb_ledger.md)
* [qldb_stream](qldb_stream.md)
* [quicksight_account_subscription](quicksight_account_subscription.md)
* [quicksight_analysis](quicksight_analysis.md)
* [quicksight_dashboard](quicksight_dashboard.md)
* [quicksight_data_set](quicksight_data_set.md)
* [quicksight_data_source](quicksight_data_source.md)
* [quicksight_folder](quicksight_folder.md)
* [quicksight_folder_membership](quicksight_folder_membership.md)
* [quicksight_group](quicksight_group.md)
* [quicksight_group_membership](quicksight_group_membership.md)
* [quicksight_iam_policy_assignment](quicksight_iam_policy_assignment.md)
* [quicksight_ingestion](quicksight_ingestion.md)
* [quicksight_namespace](quicksight_namespace.md)
* [quicksight_refresh_schedule](quicksight_refresh_schedule.md)
* [quicksight_template](quicksight_template.md)
* [quicksight_template_alias](quicksight_template_alias.md)
* [quicksight_theme](quicksight_theme.md)
* [quicksight_user](quicksight_user.md)
* [quicksight_vpc_connection](quicksight_vpc_connection.md)
* [ram_principal_association](ram_principal_association.md)
* [ram_resource_association](ram_resource_association.md)
* [ram_resource_share](ram_resource_share.md)
* [ram_resource_share_accepter](ram_resource_share_accepter.md)
* [ram_sharing_with_organization](ram_sharing_with_organization.md)
* [rbin_rule](rbin_rule.md)
* [rds_cluster](rds_cluster.md)
* [rds_cluster_activity_stream](rds_cluster_activity_stream.md)
* [rds_cluster_endpoint](rds_cluster_endpoint.md)
* [rds_cluster_instance](rds_cluster_instance.md)
* [rds_cluster_parameter_group](rds_cluster_parameter_group.md)
* [rds_cluster_role_association](rds_cluster_role_association.md)
* [rds_custom_db_engine_version](rds_custom_db_engine_version.md)
* [rds_export_task](rds_export_task.md)
* [rds_global_cluster](rds_global_cluster.md)
* [rds_reserved_instance](rds_reserved_instance.md)
* [redshift_authentication_profile](redshift_authentication_profile.md)
* [redshift_cluster](redshift_cluster.md)
* [redshift_cluster_iam_roles](redshift_cluster_iam_roles.md)
* [redshift_cluster_snapshot](redshift_cluster_snapshot.md)
* [redshift_endpoint_access](redshift_endpoint_access.md)
* [redshift_endpoint_authorization](redshift_endpoint_authorization.md)
* [redshift_event_subscription](redshift_event_subscription.md)
* [redshift_hsm_client_certificate](redshift_hsm_client_certificate.md)
* [redshift_hsm_configuration](redshift_hsm_configuration.md)
* [redshift_parameter_group](redshift_parameter_group.md)
* [redshift_partner](redshift_partner.md)
* [redshift_resource_policy](redshift_resource_policy.md)
* [redshift_scheduled_action](redshift_scheduled_action.md)
* [redshift_snapshot_copy_grant](redshift_snapshot_copy_grant.md)
* [redshift_snapshot_schedule](redshift_snapshot_schedule.md)
* [redshift_snapshot_schedule_association](redshift_snapshot_schedule_association.md)
* [redshift_subnet_group](redshift_subnet_group.md)
* [redshift_usage_limit](redshift_usage_limit.md)
* [redshiftdata_statement](redshiftdata_statement.md)
* [redshiftserverless_endpoint_access](redshiftserverless_endpoint_access.md)
* [redshiftserverless_namespace](redshiftserverless_namespace.md)
* [redshiftserverless_resource_policy](redshiftserverless_resource_policy.md)
* [redshiftserverless_snapshot](redshiftserverless_snapshot.md)
* [redshiftserverless_usage_limit](redshiftserverless_usage_limit.md)
* [redshiftserverless_workgroup](redshiftserverless_workgroup.md)
* [rekognition_project](rekognition_project.md)
* [resourceexplorer2_index](resourceexplorer2_index.md)
* [resourceexplorer2_view](resourceexplorer2_view.md)
* [resourcegroups_group](resourcegroups_group.md)
* [resourcegroups_resource](resourcegroups_resource.md)
* [rolesanywhere_profile](rolesanywhere_profile.md)
* [rolesanywhere_trust_anchor](rolesanywhere_trust_anchor.md)
* [route](route.md)
* [route53_cidr_collection](route53_cidr_collection.md)
* [route53_cidr_location](route53_cidr_location.md)
* [route53_delegation_set](route53_delegation_set.md)
* [route53_health_check](route53_health_check.md)
* [route53_hosted_zone_dnssec](route53_hosted_zone_dnssec.md)
* [route53_key_signing_key](route53_key_signing_key.md)
* [route53_query_log](route53_query_log.md)
* [route53_record](route53_record.md)
* [route53_resolver_config](route53_resolver_config.md)
* [route53_resolver_dnssec_config](route53_resolver_dnssec_config.md)
* [route53_resolver_endpoint](route53_resolver_endpoint.md)
* [route53_resolver_firewall_config](route53_resolver_firewall_config.md)
* [route53_resolver_firewall_domain_list](route53_resolver_firewall_domain_list.md)
* [route53_resolver_firewall_rule](route53_resolver_firewall_rule.md)
* [route53_resolver_firewall_rule_group](route53_resolver_firewall_rule_group.md)
* [route53_resolver_firewall_rule_group_association](route53_resolver_firewall_rule_group_association.md)
* [route53_resolver_query_log_config](route53_resolver_query_log_config.md)
* [route53_resolver_query_log_config_association](route53_resolver_query_log_config_association.md)
* [route53_resolver_rule](route53_resolver_rule.md)
* [route53_resolver_rule_association](route53_resolver_rule_association.md)
* [route53_traffic_policy](route53_traffic_policy.md)
* [route53_traffic_policy_instance](route53_traffic_policy_instance.md)
* [route53_vpc_association_authorization](route53_vpc_association_authorization.md)
* [route53_zone](route53_zone.md)
* [route53_zone_association](route53_zone_association.md)
* [route53domains_delegation_signer_record](route53domains_delegation_signer_record.md)
* [route53domains_registered_domain](route53domains_registered_domain.md)
* [route53recoverycontrolconfig_cluster](route53recoverycontrolconfig_cluster.md)
* [route53recoverycontrolconfig_control_panel](route53recoverycontrolconfig_control_panel.md)
* [route53recoverycontrolconfig_routing_control](route53recoverycontrolconfig_routing_control.md)
* [route53recoverycontrolconfig_safety_rule](route53recoverycontrolconfig_safety_rule.md)
* [route53recoveryreadiness_cell](route53recoveryreadiness_cell.md)
* [route53recoveryreadiness_readiness_check](route53recoveryreadiness_readiness_check.md)
* [route53recoveryreadiness_recovery_group](route53recoveryreadiness_recovery_group.md)
* [route53recoveryreadiness_resource_set](route53recoveryreadiness_resource_set.md)
* [route_table](route_table.md)
* [route_table_association](route_table_association.md)
* [rum_app_monitor](rum_app_monitor.md)
* [rum_metrics_destination](rum_metrics_destination.md)
* [s3_access_point](s3_access_point.md)
* [s3_account_public_access_block](s3_account_public_access_block.md)
* [s3_bucket](s3_bucket.md)
* [s3_bucket_accelerate_configuration](s3_bucket_accelerate_configuration.md)
* [s3_bucket_acl](s3_bucket_acl.md)
* [s3_bucket_analytics_configuration](s3_bucket_analytics_configuration.md)
* [s3_bucket_cors_configuration](s3_bucket_cors_configuration.md)
* [s3_bucket_intelligent_tiering_configuration](s3_bucket_intelligent_tiering_configuration.md)
* [s3_bucket_inventory](s3_bucket_inventory.md)
* [s3_bucket_lifecycle_configuration](s3_bucket_lifecycle_configuration.md)
* [s3_bucket_logging](s3_bucket_logging.md)
* [s3_bucket_metric](s3_bucket_metric.md)
* [s3_bucket_notification](s3_bucket_notification.md)
* [s3_bucket_object](s3_bucket_object.md)
* [s3_bucket_object_lock_configuration](s3_bucket_object_lock_configuration.md)
* [s3_bucket_ownership_controls](s3_bucket_ownership_controls.md)
* [s3_bucket_policy](s3_bucket_policy.md)
* [s3_bucket_public_access_block](s3_bucket_public_access_block.md)
* [s3_bucket_replication_configuration](s3_bucket_replication_configuration.md)
* [s3_bucket_request_payment_configuration](s3_bucket_request_payment_configuration.md)
* [s3_bucket_server_side_encryption_configuration](s3_bucket_server_side_encryption_configuration.md)
* [s3_bucket_versioning](s3_bucket_versioning.md)
* [s3_bucket_website_configuration](s3_bucket_website_configuration.md)
* [s3_directory_bucket](s3_directory_bucket.md)
* [s3_object](s3_object.md)
* [s3_object_copy](s3_object_copy.md)
* [s3control_access_grant](s3control_access_grant.md)
* [s3control_access_grants_instance](s3control_access_grants_instance.md)
* [s3control_access_grants_instance_resource_policy](s3control_access_grants_instance_resource_policy.md)
* [s3control_access_grants_location](s3control_access_grants_location.md)
* [s3control_access_point_policy](s3control_access_point_policy.md)
* [s3control_bucket](s3control_bucket.md)
* [s3control_bucket_lifecycle_configuration](s3control_bucket_lifecycle_configuration.md)
* [s3control_bucket_policy](s3control_bucket_policy.md)
* [s3control_multi_region_access_point](s3control_multi_region_access_point.md)
* [s3control_multi_region_access_point_policy](s3control_multi_region_access_point_policy.md)
* [s3control_object_lambda_access_point](s3control_object_lambda_access_point.md)
* [s3control_object_lambda_access_point_policy](s3control_object_lambda_access_point_policy.md)
* [s3control_storage_lens_configuration](s3control_storage_lens_configuration.md)
* [s3outposts_endpoint](s3outposts_endpoint.md)
* [sagemaker_app](sagemaker_app.md)
* [sagemaker_app_image_config](sagemaker_app_image_config.md)
* [sagemaker_code_repository](sagemaker_code_repository.md)
* [sagemaker_data_quality_job_definition](sagemaker_data_quality_job_definition.md)
* [sagemaker_device](sagemaker_device.md)
* [sagemaker_device_fleet](sagemaker_device_fleet.md)
* [sagemaker_domain](sagemaker_domain.md)
* [sagemaker_endpoint](sagemaker_endpoint.md)
* [sagemaker_endpoint_configuration](sagemaker_endpoint_configuration.md)
* [sagemaker_feature_group](sagemaker_feature_group.md)
* [sagemaker_flow_definition](sagemaker_flow_definition.md)
* [sagemaker_human_task_ui](sagemaker_human_task_ui.md)
* [sagemaker_image](sagemaker_image.md)
* [sagemaker_image_version](sagemaker_image_version.md)
* [sagemaker_model](sagemaker_model.md)
* [sagemaker_model_package_group](sagemaker_model_package_group.md)
* [sagemaker_model_package_group_policy](sagemaker_model_package_group_policy.md)
* [sagemaker_monitoring_schedule](sagemaker_monitoring_schedule.md)
* [sagemaker_notebook_instance](sagemaker_notebook_instance.md)
* [sagemaker_notebook_instance_lifecycle_configuration](sagemaker_notebook_instance_lifecycle_configuration.md)
* [sagemaker_pipeline](sagemaker_pipeline.md)
* [sagemaker_project](sagemaker_project.md)
* [sagemaker_servicecatalog_portfolio_status](sagemaker_servicecatalog_portfolio_status.md)
* [sagemaker_space](sagemaker_space.md)
* [sagemaker_studio_lifecycle_config](sagemaker_studio_lifecycle_config.md)
* [sagemaker_user_profile](sagemaker_user_profile.md)
* [sagemaker_workforce](sagemaker_workforce.md)
* [sagemaker_workteam](sagemaker_workteam.md)
* [scheduler_schedule](scheduler_schedule.md)
* [scheduler_schedule_group](scheduler_schedule_group.md)
* [schemas_discoverer](schemas_discoverer.md)
* [schemas_registry](schemas_registry.md)
* [schemas_registry_policy](schemas_registry_policy.md)
* [schemas_schema](schemas_schema.md)
* [secretsmanager_secret](secretsmanager_secret.md)
* [secretsmanager_secret_policy](secretsmanager_secret_policy.md)
* [secretsmanager_secret_rotation](secretsmanager_secret_rotation.md)
* [secretsmanager_secret_version](secretsmanager_secret_version.md)
* [security_group](security_group.md)
* [security_group_rule](security_group_rule.md)
* [securityhub_account](securityhub_account.md)
* [securityhub_action_target](securityhub_action_target.md)
* [securityhub_finding_aggregator](securityhub_finding_aggregator.md)
* [securityhub_insight](securityhub_insight.md)
* [securityhub_invite_accepter](securityhub_invite_accepter.md)
* [securityhub_member](securityhub_member.md)
* [securityhub_organization_admin_account](securityhub_organization_admin_account.md)
* [securityhub_organization_configuration](securityhub_organization_configuration.md)
* [securityhub_product_subscription](securityhub_product_subscription.md)
* [securityhub_standards_control](securityhub_standards_control.md)
* [securityhub_standards_subscription](securityhub_standards_subscription.md)
* [securitylake_aws_log_source](securitylake_aws_log_source.md)
* [securitylake_data_lake](securitylake_data_lake.md)
* [serverlessapplicationrepository_cloudformation_stack](serverlessapplicationrepository_cloudformation_stack.md)
* [service_discovery_http_namespace](service_discovery_http_namespace.md)
* [service_discovery_instance](service_discovery_instance.md)
* [service_discovery_private_dns_namespace](service_discovery_private_dns_namespace.md)
* [service_discovery_public_dns_namespace](service_discovery_public_dns_namespace.md)
* [service_discovery_service](service_discovery_service.md)
* [servicecatalog_budget_resource_association](servicecatalog_budget_resource_association.md)
* [servicecatalog_constraint](servicecatalog_constraint.md)
* [servicecatalog_organizations_access](servicecatalog_organizations_access.md)
* [servicecatalog_portfolio](servicecatalog_portfolio.md)
* [servicecatalog_portfolio_share](servicecatalog_portfolio_share.md)
* [servicecatalog_principal_portfolio_association](servicecatalog_principal_portfolio_association.md)
* [servicecatalog_product](servicecatalog_product.md)
* [servicecatalog_product_portfolio_association](servicecatalog_product_portfolio_association.md)
* [servicecatalog_provisioned_product](servicecatalog_provisioned_product.md)
* [servicecatalog_provisioning_artifact](servicecatalog_provisioning_artifact.md)
* [servicecatalog_service_action](servicecatalog_service_action.md)
* [servicecatalog_tag_option](servicecatalog_tag_option.md)
* [servicecatalog_tag_option_resource_association](servicecatalog_tag_option_resource_association.md)
* [servicequotas_service_quota](servicequotas_service_quota.md)
* [servicequotas_template](servicequotas_template.md)
* [servicequotas_template_association](servicequotas_template_association.md)
* [ses_active_receipt_rule_set](ses_active_receipt_rule_set.md)
* [ses_configuration_set](ses_configuration_set.md)
* [ses_domain_dkim](ses_domain_dkim.md)
* [ses_domain_identity](ses_domain_identity.md)
* [ses_domain_identity_verification](ses_domain_identity_verification.md)
* [ses_domain_mail_from](ses_domain_mail_from.md)
* [ses_email_identity](ses_email_identity.md)
* [ses_event_destination](ses_event_destination.md)
* [ses_identity_notification_topic](ses_identity_notification_topic.md)
* [ses_identity_policy](ses_identity_policy.md)
* [ses_receipt_filter](ses_receipt_filter.md)
* [ses_receipt_rule](ses_receipt_rule.md)
* [ses_receipt_rule_set](ses_receipt_rule_set.md)
* [ses_template](ses_template.md)
* [sesv2_account_vdm_attributes](sesv2_account_vdm_attributes.md)
* [sesv2_configuration_set](sesv2_configuration_set.md)
* [sesv2_configuration_set_event_destination](sesv2_configuration_set_event_destination.md)
* [sesv2_contact_list](sesv2_contact_list.md)
* [sesv2_dedicated_ip_assignment](sesv2_dedicated_ip_assignment.md)
* [sesv2_dedicated_ip_pool](sesv2_dedicated_ip_pool.md)
* [sesv2_email_identity](sesv2_email_identity.md)
* [sesv2_email_identity_feedback_attributes](sesv2_email_identity_feedback_attributes.md)
* [sesv2_email_identity_mail_from_attributes](sesv2_email_identity_mail_from_attributes.md)
* [sfn_activity](sfn_activity.md)
* [sfn_alias](sfn_alias.md)
* [sfn_state_machine](sfn_state_machine.md)
* [shield_application_layer_automatic_response](shield_application_layer_automatic_response.md)
* [shield_drt_access_log_bucket_association](shield_drt_access_log_bucket_association.md)
* [shield_drt_access_role_arn_association](shield_drt_access_role_arn_association.md)
* [shield_protection](shield_protection.md)
* [shield_protection_group](shield_protection_group.md)
* [shield_protection_health_check_association](shield_protection_health_check_association.md)
* [signer_signing_job](signer_signing_job.md)
* [signer_signing_profile](signer_signing_profile.md)
* [signer_signing_profile_permission](signer_signing_profile_permission.md)
* [simpledb_domain](simpledb_domain.md)
* [snapshot_create_volume_permission](snapshot_create_volume_permission.md)
* [sns_platform_application](sns_platform_application.md)
* [sns_sms_preferences](sns_sms_preferences.md)
* [sns_topic](sns_topic.md)
* [sns_topic_data_protection_policy](sns_topic_data_protection_policy.md)
* [sns_topic_policy](sns_topic_policy.md)
* [sns_topic_subscription](sns_topic_subscription.md)
* [spot_datafeed_subscription](spot_datafeed_subscription.md)
* [spot_fleet_request](spot_fleet_request.md)
* [spot_instance_request](spot_instance_request.md)
* [sqs_queue](sqs_queue.md)
* [sqs_queue_policy](sqs_queue_policy.md)
* [sqs_queue_redrive_allow_policy](sqs_queue_redrive_allow_policy.md)
* [sqs_queue_redrive_policy](sqs_queue_redrive_policy.md)
* [ssm_activation](ssm_activation.md)
* [ssm_association](ssm_association.md)
* [ssm_default_patch_baseline](ssm_default_patch_baseline.md)
* [ssm_document](ssm_document.md)
* [ssm_maintenance_window](ssm_maintenance_window.md)
* [ssm_maintenance_window_target](ssm_maintenance_window_target.md)
* [ssm_maintenance_window_task](ssm_maintenance_window_task.md)
* [ssm_parameter](ssm_parameter.md)
* [ssm_patch_baseline](ssm_patch_baseline.md)
* [ssm_patch_group](ssm_patch_group.md)
* [ssm_resource_data_sync](ssm_resource_data_sync.md)
* [ssm_service_setting](ssm_service_setting.md)
* [ssmcontacts_contact](ssmcontacts_contact.md)
* [ssmcontacts_contact_channel](ssmcontacts_contact_channel.md)
* [ssmcontacts_plan](ssmcontacts_plan.md)
* [ssmincidents_replication_set](ssmincidents_replication_set.md)
* [ssmincidents_response_plan](ssmincidents_response_plan.md)
* [ssoadmin_account_assignment](ssoadmin_account_assignment.md)
* [ssoadmin_application](ssoadmin_application.md)
* [ssoadmin_application_access_scope](ssoadmin_application_access_scope.md)
* [ssoadmin_application_assignment](ssoadmin_application_assignment.md)
* [ssoadmin_application_assignment_configuration](ssoadmin_application_assignment_configuration.md)
* [ssoadmin_customer_managed_policy_attachment](ssoadmin_customer_managed_policy_attachment.md)
* [ssoadmin_instance_access_control_attributes](ssoadmin_instance_access_control_attributes.md)
* [ssoadmin_managed_policy_attachment](ssoadmin_managed_policy_attachment.md)
* [ssoadmin_permission_set](ssoadmin_permission_set.md)
* [ssoadmin_permission_set_inline_policy](ssoadmin_permission_set_inline_policy.md)
* [ssoadmin_permissions_boundary_attachment](ssoadmin_permissions_boundary_attachment.md)
* [ssoadmin_trusted_token_issuer](ssoadmin_trusted_token_issuer.md)
* [storagegateway_cache](storagegateway_cache.md)
* [storagegateway_cached_iscsi_volume](storagegateway_cached_iscsi_volume.md)
* [storagegateway_file_system_association](storagegateway_file_system_association.md)
* [storagegateway_gateway](storagegateway_gateway.md)
* [storagegateway_nfs_file_share](storagegateway_nfs_file_share.md)
* [storagegateway_smb_file_share](storagegateway_smb_file_share.md)
* [storagegateway_stored_iscsi_volume](storagegateway_stored_iscsi_volume.md)
* [storagegateway_tape_pool](storagegateway_tape_pool.md)
* [storagegateway_upload_buffer](storagegateway_upload_buffer.md)
* [storagegateway_working_storage](storagegateway_working_storage.md)
* [subnet](subnet.md)
* [swf_domain](swf_domain.md)
* [synthetics_canary](synthetics_canary.md)
* [synthetics_group](synthetics_group.md)
* [synthetics_group_association](synthetics_group_association.md)
* [timestreamwrite_database](timestreamwrite_database.md)
* [timestreamwrite_table](timestreamwrite_table.md)
* [transcribe_language_model](transcribe_language_model.md)
* [transcribe_medical_vocabulary](transcribe_medical_vocabulary.md)
* [transcribe_vocabulary](transcribe_vocabulary.md)
* [transcribe_vocabulary_filter](transcribe_vocabulary_filter.md)
* [transfer_access](transfer_access.md)
* [transfer_agreement](transfer_agreement.md)
* [transfer_certificate](transfer_certificate.md)
* [transfer_connector](transfer_connector.md)
* [transfer_profile](transfer_profile.md)
* [transfer_server](transfer_server.md)
* [transfer_ssh_key](transfer_ssh_key.md)
* [transfer_tag](transfer_tag.md)
* [transfer_user](transfer_user.md)
* [transfer_workflow](transfer_workflow.md)
* [verifiedaccess_endpoint](verifiedaccess_endpoint.md)
* [verifiedaccess_group](verifiedaccess_group.md)
* [verifiedaccess_instance](verifiedaccess_instance.md)
* [verifiedaccess_instance_logging_configuration](verifiedaccess_instance_logging_configuration.md)
* [verifiedaccess_instance_trust_provider_attachment](verifiedaccess_instance_trust_provider_attachment.md)
* [verifiedaccess_trust_provider](verifiedaccess_trust_provider.md)
* [verifiedpermissions_policy_store](verifiedpermissions_policy_store.md)
* [verifiedpermissions_policy_template](verifiedpermissions_policy_template.md)
* [verifiedpermissions_schema](verifiedpermissions_schema.md)
* [volume_attachment](volume_attachment.md)
* [vpc](vpc.md)
* [vpc_dhcp_options](vpc_dhcp_options.md)
* [vpc_dhcp_options_association](vpc_dhcp_options_association.md)
* [vpc_endpoint](vpc_endpoint.md)
* [vpc_endpoint_connection_accepter](vpc_endpoint_connection_accepter.md)
* [vpc_endpoint_connection_notification](vpc_endpoint_connection_notification.md)
* [vpc_endpoint_policy](vpc_endpoint_policy.md)
* [vpc_endpoint_route_table_association](vpc_endpoint_route_table_association.md)
* [vpc_endpoint_security_group_association](vpc_endpoint_security_group_association.md)
* [vpc_endpoint_service](vpc_endpoint_service.md)
* [vpc_endpoint_service_allowed_principal](vpc_endpoint_service_allowed_principal.md)
* [vpc_endpoint_subnet_association](vpc_endpoint_subnet_association.md)
* [vpc_ipam](vpc_ipam.md)
* [vpc_ipam_organization_admin_account](vpc_ipam_organization_admin_account.md)
* [vpc_ipam_pool](vpc_ipam_pool.md)
* [vpc_ipam_pool_cidr](vpc_ipam_pool_cidr.md)
* [vpc_ipam_pool_cidr_allocation](vpc_ipam_pool_cidr_allocation.md)
* [vpc_ipam_preview_next_cidr](vpc_ipam_preview_next_cidr.md)
* [vpc_ipam_resource_discovery](vpc_ipam_resource_discovery.md)
* [vpc_ipam_resource_discovery_association](vpc_ipam_resource_discovery_association.md)
* [vpc_ipam_scope](vpc_ipam_scope.md)
* [vpc_ipv4_cidr_block_association](vpc_ipv4_cidr_block_association.md)
* [vpc_ipv6_cidr_block_association](vpc_ipv6_cidr_block_association.md)
* [vpc_network_performance_metric_subscription](vpc_network_performance_metric_subscription.md)
* [vpc_peering_connection](vpc_peering_connection.md)
* [vpc_peering_connection_accepter](vpc_peering_connection_accepter.md)
* [vpc_peering_connection_options](vpc_peering_connection_options.md)
* [vpc_security_group_egress_rule](vpc_security_group_egress_rule.md)
* [vpc_security_group_ingress_rule](vpc_security_group_ingress_rule.md)
* [vpclattice_access_log_subscription](vpclattice_access_log_subscription.md)
* [vpclattice_auth_policy](vpclattice_auth_policy.md)
* [vpclattice_listener](vpclattice_listener.md)
* [vpclattice_listener_rule](vpclattice_listener_rule.md)
* [vpclattice_resource_policy](vpclattice_resource_policy.md)
* [vpclattice_service](vpclattice_service.md)
* [vpclattice_service_network](vpclattice_service_network.md)
* [vpclattice_service_network_service_association](vpclattice_service_network_service_association.md)
* [vpclattice_service_network_vpc_association](vpclattice_service_network_vpc_association.md)
* [vpclattice_target_group](vpclattice_target_group.md)
* [vpclattice_target_group_attachment](vpclattice_target_group_attachment.md)
* [vpn_connection](vpn_connection.md)
* [vpn_connection_route](vpn_connection_route.md)
* [vpn_gateway](vpn_gateway.md)
* [vpn_gateway_attachment](vpn_gateway_attachment.md)
* [vpn_gateway_route_propagation](vpn_gateway_route_propagation.md)
* [waf_byte_match_set](waf_byte_match_set.md)
* [waf_geo_match_set](waf_geo_match_set.md)
* [waf_ipset](waf_ipset.md)
* [waf_rate_based_rule](waf_rate_based_rule.md)
* [waf_regex_match_set](waf_regex_match_set.md)
* [waf_regex_pattern_set](waf_regex_pattern_set.md)
* [waf_rule](waf_rule.md)
* [waf_rule_group](waf_rule_group.md)
* [waf_size_constraint_set](waf_size_constraint_set.md)
* [waf_sql_injection_match_set](waf_sql_injection_match_set.md)
* [waf_web_acl](waf_web_acl.md)
* [waf_xss_match_set](waf_xss_match_set.md)
* [wafregional_byte_match_set](wafregional_byte_match_set.md)
* [wafregional_geo_match_set](wafregional_geo_match_set.md)
* [wafregional_ipset](wafregional_ipset.md)
* [wafregional_rate_based_rule](wafregional_rate_based_rule.md)
* [wafregional_regex_match_set](wafregional_regex_match_set.md)
* [wafregional_regex_pattern_set](wafregional_regex_pattern_set.md)
* [wafregional_rule](wafregional_rule.md)
* [wafregional_rule_group](wafregional_rule_group.md)
* [wafregional_size_constraint_set](wafregional_size_constraint_set.md)
* [wafregional_sql_injection_match_set](wafregional_sql_injection_match_set.md)
* [wafregional_web_acl](wafregional_web_acl.md)
* [wafregional_web_acl_association](wafregional_web_acl_association.md)
* [wafregional_xss_match_set](wafregional_xss_match_set.md)
* [wafv2_ip_set](wafv2_ip_set.md)
* [wafv2_regex_pattern_set](wafv2_regex_pattern_set.md)
* [wafv2_rule_group](wafv2_rule_group.md)
* [wafv2_web_acl](wafv2_web_acl.md)
* [wafv2_web_acl_association](wafv2_web_acl_association.md)
* [wafv2_web_acl_logging_configuration](wafv2_web_acl_logging_configuration.md)
* [worklink_fleet](worklink_fleet.md)
* [worklink_website_certificate_authority_association](worklink_website_certificate_authority_association.md)
* [workspaces_connection_alias](workspaces_connection_alias.md)
* [workspaces_directory](workspaces_directory.md)
* [workspaces_ip_group](workspaces_ip_group.md)
* [workspaces_workspace](workspaces_workspace.md)
* [xray_encryption_config](xray_encryption_config.md)
* [xray_group](xray_group.md)
* [xray_sampling_rule](xray_sampling_rule.md)